# pet-pal-ai

./: .env.sample  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
etl/: extractor.py  loader.py  urls.txt
